# facerec_pkg

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
mngr-fr-pkg/: greet_user.py
mngr_fr_pkg/: cam_pub.py  greet_user.py  img_sub.py  mngr_facerec.py  update_users.py
